overflow trying to fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@
     margin: 0;
     box-sizing: border-box;
     background-repeat: no-repeat;
-    width: 100%;
+    overflow-x: hidden;
 }
 
 body {
